# django-booking

./: .gitignore  readme.rst  setup.cfg
django_booking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
places/: __init__.py  admin.py  base_controllers.py  base_models.py  controllers.py  models.py  settings.py  utils.py
places/api/: serializers.py  urls.py  views.py
places/migrations/: 0001_initial.py
